# Sehfeld

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/src/: AnomalyDetector.cpp  AnomalyDetector.hpp  Reporter.cpp  Reporter.hpp  sal_mingw.hpp
notebook/: SEHFELD.ipynb
